--- a/pset06.tex
+++ b/pset06.tex
@@ -49,7 +49,7 @@
     % Enter solution here
     \end{solution}
 
-    \question Imagine a collection, $S$, of sets. And let $I$ be some index set (this just some set whose elements we'll use to index the elements of $S$) such that for every element $\alpha \in I$ we have a set $S_\alpha\in S$ 
+    \question Imagine a collection, $S$, of sets. And let $I$ be some index set (this is just some set whose elements we'll use to index the elements of $S$) such that for every element $\alpha \in I$ we have a set $S_\alpha\in S$ 
      
     Union and intersection involving collections of sets are defined as follows.
     \begin{align*}
